--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <img src="./assets/images/my-movie-ranking.PNG" height="200" alt="movie ranking project"></img>
     <h3><a href="./public/my-birthday-invite.html">Birthday Invite Project</a></h3>
     <img src="./assets/images/my-birthday-invite.PNG" height="200" alt="birthday invite project"></img>
+    <h3><a href="./public/my-resume.html">Resume Capstone Project</a></h3>
+    <img src="./assets/images/my-resume.PNG" height="200" alt="resume capstone project"></img>
     <hr />
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
