--- a/public/about.html
+++ b/public/about.html
@@ -1,17 +1,5 @@
 <h1>About Me</h1>
-<p>My name is Annette Stevenson, and I'm a web developer with many years of experience writing software automation code.
-  My background as a software automation developer has sharpened my attention to detail, while expanding my skills at
+<p>My name is Annette Stevenson, and I'm a developer with many years of experience writing software automation code.
+  My background in software automation has sharpened my attention to detail, while expanding my skills at
   writing effective code.
 </p>
-
-<p>Curabitur elementum sagittis mollis. In porta nec quam ut semper. Nulla volutpat neque quis lacus mattis eleifend.
-  Phasellus et congue odio. Mauris tristique, nisl quis porttitor porttitor, tortor ante mattis ex, at dictum tortor
-  dolor
-  ut sem. Nullam nec libero non ex porta vulputate a eu sapien. In nec bibendum mauris. Fusce iaculis lectus vel magna
-  laoreet gravida.</p>
-
-<p>Donec euismod vestibulum arcu, a blandit metus mattis ultrices. Integer quis hendrerit justo. Maecenas sed tempor mi.
-  Fusce egestas urna leo. Mauris viverra sem sed libero egestas, volutpat aliquet magna porta. Quisque id diam sed ipsum
-  interdum sollicitudin id quis augue. Donec congue nisl nec massa ornare imperdiet quis quis odio. Etiam ut volutpat
-  nisl. Vestibulum hendrerit justo nibh, eget consequat magna fermentum finibus. Pellentesque et urna fringilla, rutrum
-  neque in, varius leo. Vestibulum efficitur id massa eget pellentesque.</p>
