--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h3><a href="./public/my-birthday-invite.html">Birthday Invite Project</a></h3>
     <img src="./assets/images/my-birthday-invite.PNG" height="200" alt="birthday invite project"></img>
     <h3><a href="./public/my-resume.html">Resume Capstone Project</a></h3>
+    <p>NOTE: This is a resume preview and doesn't include all of my work experience.</p>
     <img src="./assets/images/my-resume.PNG" height="200" alt="resume capstone project"></img>
     <hr />
     <a href="./public/about.html">About Me</a>
