--- a/public/my-resume.html
+++ b/public/my-resume.html
@@ -161,6 +161,7 @@
                 </ul>
                 <li>SourceTree</li>
                 <li>Perforce</li>
+                <li>Visual Source Safe</li>
             </ul>
             <li>Software engineering models:</li>
             <ul>
@@ -217,8 +218,8 @@
                 <ul>
                     <li>PC</li>
                     <li>Mac</li>
-                    <li>Tablets</li>
-                    <li>Phones</li>
+                    <li>Tablet</li>
+                    <li>Phone</li>
                     <li>Virtual Desktop (VDI)</li>
                     <li>VM</li>
                 </ul>
