--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <h3><a href="./public/my-resume.html">Resume Capstone Project</a></h3>
     <p>NOTE: This is a resume preview and doesn't include all of my work experience.</p>
     <img src="./assets/images/my-resume.PNG" height="200" alt="resume capstone project"></img>
+    <h3><a href="./public/adding-css.html">Adding CSS Project</a></h3>
+    <img src="./assets/images/adding-css.PNG" height="200" alt="adding css project"></img>
     <hr />
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
