--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <img src="./assets/images/my-resume.PNG" height="200" alt="resume capstone project"></img>
     <h3><a href="./public/adding-css.html">Adding CSS Project</a></h3>
     <img src="./assets/images/adding-css.PNG" height="200" alt="adding css project"></img>
+    <h3><a href="./public/css-selectors.html">CSS Selectors Project</a></h3>
+    <img src="./assets/images/css-selectors.PNG" height="200" alt="css selectors project"></img>
     <hr />
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
