--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
     <h2>I'm a web developer</h2>
     <hr />
     <h3><a href="./public/my-movie-ranking.html">Movie Ranking Project</a></h3>
-    <img src="./assets/images/my-movie-ranking.PNG" height="200" alt="movie ranking project"></img>
+    <img src="./assets/images/my-movie-ranking.PNG" height="200" width="200" alt="movie ranking project"></img>
     <h3><a href="./public/my-birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/my-birthday-invite.PNG" height="200" alt="birthday invite project"></img>
+    <img src="./assets/images/my-birthday-invite.PNG" height="200" width="200" alt="birthday invite project"></img>
     <h3><a href="./public/my-resume.html">Resume Capstone Project</a></h3>
     <p>NOTE: This is a resume preview and doesn't include all of my work experience.</p>
-    <img src="./assets/images/my-resume.PNG" height="200" alt="resume capstone project"></img>
+    <img src="./assets/images/my-resume.PNG" height="200" width="200" alt="resume capstone project"></img>
     <h3><a href="./public/adding-css.html">Adding CSS Project</a></h3>
-    <img src="./assets/images/adding-css.PNG" height="200" alt="adding css project"></img>
+    <img src="./assets/images/adding-css.PNG" height="200" width="200" alt="adding css project"></img>
     <h3><a href="./public/css-selectors.html">CSS Selectors Project</a></h3>
-    <img src="./assets/images/css-selectors.PNG" height="200" alt="css selectors project"></img>
+    <img src="./assets/images/css-selectors.PNG" height="200" width="200" alt="css selectors project"></img>
+    <h3><a href="./public/spanish-colors.html">Spanish Colors Project</a></h3>
+    <img src="./assets/images/spanish-colors.PNG" height="200" width="200" alt="spanish colors project"></img>
     <hr />
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
