--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <img src="./assets/images/css-selectors.PNG" height="200" width="200" alt="css selectors project"></img>
     <h3><a href="./public/spanish-colors.html">Spanish Colors Project</a></h3>
     <img src="./assets/images/spanish-colors.PNG" height="200" width="200" alt="spanish colors project"></img>
+    <h3><a href="./public/css-colors.html">CSS Colors Project</a></h3>
+    <img src="./assets/images/css-colors.PNG" height="200" width="200" alt="css colors project"></img>
     <hr />
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
