--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <img src="./assets/images/spanish-colors.PNG" height="200" width="200" alt="spanish colors project"></img>
     <h3><a href="./public/css-colors.html">CSS Colors Project</a></h3>
     <img src="./assets/images/css-colors.PNG" height="200" width="200" alt="css colors project"></img>
+    <h3><a href="./public/font-properties.html">Font Properties Project</a></h3>
+    <img src="./assets/images/font-properties.PNG" height="200" width="200" alt="font properties project"></img>
     <hr />
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
