--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <img src="./assets/images/css-colors.PNG" height="200" width="200" alt="css colors project"></img>
     <h3><a href="./public/font-properties.html">Font Properties Project</a></h3>
     <img src="./assets/images/font-properties.PNG" height="200" width="200" alt="font properties project"></img>
+    <h3><a href="./public/css-box-model.html">CSS Box Model Project</a></h3>
+    <img src="./assets/images/css-box-model.PNG" height="200" width="200" alt="css box model project"></img>
     <hr />
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
