--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <img src="./assets/images/font-properties.PNG" height="200" width="200" alt="font properties project"></img>
     <h3><a href="./public/css-box-model.html">CSS Box Model Project</a></h3>
     <img src="./assets/images/css-box-model.PNG" height="200" width="200" alt="css box model project"></img>
+    <h3><a href="./public/motivation-meme.html">Motivational Meme Project</a></h3>
+    <img src="./assets/images/motivation-meme.PNG" height="200" width="200" alt="motivational meme project"></img>
     <hr />
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
