--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <img src="./assets/images/css-box-model.PNG" height="200" width="200" alt="css box model project"></img>
     <h3><a href="./public/motivation-meme.html">Motivational Meme Project</a></h3>
     <img src="./assets/images/motivation-meme.PNG" height="200" width="200" alt="motivational meme project"></img>
+    <h3><a href="./public/css-cascade.html">CSS Cascade Project</a></h3>
+    <img src="./assets/images/css-cascade.PNG" height="200" width="200" alt="css cascade project"></img>
     <hr />
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
