--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <img src="./assets/images/css-cascade.PNG" height="200" width="200" alt="css cascade project"></img>
     <h3><a href="./public/combining-css.html">Combining CSS Project</a></h3>
     <img src="./assets/images/combining-css.PNG" height="200" width="200" alt="combining css project"></img>
+    <h3><a href="./public/css-positioning.html">CSS Positioning Project</a></h3>
+    <img src="./assets/images/css-positioning.PNG" height="200" width="200" alt="css positioning project"></img>
     <hr />
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
