--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <img src="./assets/images/combining-css.PNG" height="200" width="200" alt="combining css project"></img>
     <h3><a href="./public/css-positioning.html">CSS Positioning Project</a></h3>
     <img src="./assets/images/css-positioning.PNG" height="200" width="200" alt="css positioning project"></img>
+    <h3><a href="./public/css-flag.html">CSS Flag Project</a></h3>
+    <img src="./assets/images/css-flag.PNG" height="200" width="200" alt="css flag project"></img>
+    <hr />
     <hr />
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
