--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     <img src="./assets/images/css-positioning.PNG" height="200" width="200" alt="css positioning project"></img>
     <h3><a href="./public/css-flag.html">CSS Flag Project</a></h3>
     <img src="./assets/images/css-flag.PNG" height="200" width="200" alt="css flag project"></img>
+    <h3><a href="./public/css-display-horizontal.html">CSS Display Project (Horizontal)</a></h3>
+    <img src="./assets/images/css-display-horizontal.PNG" height="200" width="200" alt="css display project horizontal"></img>
+    <h3><a href="./public/css-display-vertical.html">CSS Display Project (Vertical)</a></h3>
+    <img src="./assets/images/css-display-vertical.PNG" height="200" width="200" alt="css display project vertical"></img>
     <hr />
     <hr />
     <a href="./public/about.html">About Me</a>
