--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <img src="./assets/images/css-display-horizontal.PNG" height="200" width="200" alt="css display project horizontal"></img>
     <h3><a href="./public/css-display-vertical.html">CSS Display Project (Vertical)</a></h3>
     <img src="./assets/images/css-display-vertical.PNG" height="200" width="200" alt="css display project vertical"></img>
+    <h3><a href="./public/css-float.html">CSS Float Project</a></h3>
+    <img src="./assets/images/css-float.PNG" height="200" width="200" alt="css float project"></img>
     <hr />
     <hr />
     <a href="./public/about.html">About Me</a>
