--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     <img src="./assets/images/css-display-vertical.PNG" height="200" width="200" alt="css display project vertical"></img>
     <h3><a href="./public/css-float.html">CSS Float Project</a></h3>
     <img src="./assets/images/css-float.PNG" height="200" width="200" alt="css float project"></img>
+    <h3><a href="./public/media-query.html">Media Query Project</a></h3>
+    <img src="./assets/images/media-query.PNG" height="200" width="200" alt="media query project"></img>
     <hr />
     <hr />
     <a href="./public/about.html">About Me</a>
