--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
     <img src="./assets/images/css-float.PNG" height="200" width="200" alt="css float project"></img>
     <h3><a href="./public/media-query.html">Media Query Project</a></h3>
     <img src="./assets/images/media-query.PNG" height="200" width="200" alt="media query project"></img>
+    <h3><a href="./public/web-design-agency.html">Web Design Agency Project</a></h3>
+    <img src="./assets/images/web-design-agency.PNG" height="200" width="200" alt="web design agency project"></img>
     <hr />
     <hr />
     <a href="./public/about.html">About Me</a>
