--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     <img src="./assets/images/media-query.PNG" height="200" width="200" alt="media query project"></img>
     <h3><a href="./public/web-design-agency.html">Web Design Agency Project</a></h3>
     <img src="./assets/images/web-design-agency.PNG" height="200" width="200" alt="web design agency project"></img>
+    <h3><a href="./public/display-flex.html">Display Flex Project</a></h3>
+    <img src="./assets/images/display-flex.PNG" height="200" width="200" alt="display flex project"></img>
     <hr />
     <hr />
     <a href="./public/about.html">About Me</a>
