--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     <img src="./assets/images/web-design-agency.PNG" height="200" width="200" alt="web design agency project"></img>
     <h3><a href="./public/display-flex.html">Display Flex Project</a></h3>
     <img src="./assets/images/display-flex.PNG" height="200" width="200" alt="display flex project"></img>
+    <h3><a href="./public/flex-direction.html">Flex Direction Project</a></h3>
+    <img src="./assets/images/flex-direction.PNG" height="200" width="200" alt="flex direction project"></img>
     <hr />
     <hr />
     <a href="./public/about.html">About Me</a>
