--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
     <img src="./assets/images/display-flex.PNG" height="200" width="200" alt="display flex project"></img>
     <h3><a href="./public/flex-direction.html">Flex Direction Project</a></h3>
     <img src="./assets/images/flex-direction.PNG" height="200" width="200" alt="flex direction project"></img>
-    <h3><a href="./public/flexbox-pricing-table.html">Flexbox Pricing <Table></Table></a></h3>
+    <h3><a href="./public/flexbox-pricing-table.html">Flexbox Pricing Table</a></h3>
     <img src="./assets/images/flexbox-pricing-table.PNG" height="200" width="200" alt="flexbox pricing table"></img>
+    <h3><a href="./public/chessboard.html">Chessboard <Table></Table></a></h3>
+    <img src="./assets/images/chessboard.PNG" height="200" width="200" alt="chessboard"></img>
     <hr />
     <hr />
     <a href="./public/about.html">About Me</a>
